# scrabble-bot

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  board.py  gaddag.py  main.py  pyproject.toml  pyrightconfig.json  research.md  test_board.py  test_gaddag.py
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp
cpp/include/scrabble/: board.hpp  env.hpp  gaddag.hpp  letter.hpp  move.hpp  point.hpp  vec_env.hpp
cpp/src/: board.cpp  env.cpp  gaddag.cpp  letter.cpp  move_gen.cpp  vec_env.cpp
cpp/tests/: CMakeLists.txt  test_board.cpp  test_env.cpp  test_gaddag.cpp  test_letter.cpp  test_move.cpp  test_move_gen.cpp
scrabble_bot/: __init__.py  _cpp_ext.pyi  main.py  replay_buffer.py  vec_env.py
scrabble_bot/board/: __init__.py  board.py  board_utils.py  letter.py  move.py  test_board.py
scrabble_bot/gaddag/: __init__.py  gaddag.py  test_gaddag.py
scrabble_bot/tests/: test_integration_board.py  test_integration_gaddag.py  test_integration_move_gen.py  test_integration_replay_buffer.py  test_integration_vec_env.py  test_smoke_board.py  test_smoke_gaddag.py  test_smoke_move_gen.py  test_smoke_pipeline.py
scripts/: profile_throughput.py
tests/: test_gaddag.py
