[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrabble-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "swig>=4.4.1",
    "autopep8>=2.0.0",
]

[tool.setuptools]
packages = ["scrabble_bot"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.autopep8]
max_line_length = 100
aggressive = 1
