[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrabble-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "swig>=4.4.1",
    "autopep8>=2.0.0",
]

[tool.setuptools]
packages = ["scrabble_bot"]

[tool.pytest.ini_options]
pythonpath = ["."]
# Enable breakpoint() support in pytest
addopts = [
    "--capture=no",  # Disable output capturing to see print statements
    "-s",  # Shortcut for --capture=no
]
# Enable debugging with breakpoint() builtin
# This allows using breakpoint() in code which will trigger the debugger

[tool.autopep8]
max_line_length = 100
aggressive = 1