[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.13.6"]
build-backend = "scikit_build_core.build"

[project]
name = "scrabble-bot"
version = "0.1.0"
description = "Scrabble AI bot with C++ core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "autopep8>=2.0.0",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["scrabble_bot"]
editable.mode = "redirect"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["scrabble_bot/tests"]
addopts = [
    "--capture=no",
    "-s",
]

[tool.autopep8]
max_line_length = 100
aggressive = 1
